--- a/mypart/used_inst/cryostats.html
+++ b/mypart/used_inst/cryostats.html
@@ -394,8 +394,10 @@
 														<span class="thumb-info-inner">Leica CM 1850 UV</span>
 														<span class="thumb-info-type">Cryostat</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
+													<span class="thumb-info-caption">
+											<span class="thumb-info-caption-text">The state of the art, fully motorized <strong>Leica 2255 microtome</strong> is used for sectioning of paraffin, resin-embedded specimens, and non-standard materials.</span>
+											</span>
+														
 													</span>
 												</span>
 											</span>
