Service/full_lab

--- a/mypart/used_inst/cytology_inst.html
+++ b/mypart/used_inst/cytology_inst.html
@@ -363,19 +363,23 @@
 					<div class="row">
 						<div class="sort-destination-loader sort-destination-loader-showing">
 							<ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+								
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item leica">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">CytycThin Prep 2000</span>
 														<span class="thumb-info-type">Processor</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>CytycThin Prep 2000</strong> is an automated slide preparation unit used with the ThinPrep Pap Test for cervical cancer testing.
+ 													</span>
 												</span>
 											</span>
 										</a>
