--- a/mypart/used_inst/stainers.html
+++ b/mypart/used_inst/stainers.html
@@ -366,55 +366,67 @@
 					<div class="row">
 						<div class="sort-destination-loader sort-destination-loader-showing">
 							<ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item leica">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Leica ST 5020</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Leica ST 5020</strong> multi-stainer is a sophisticated and versatile instrument that can perform a wide range of staining applications.  It can do both routine and special staining as well as run single or multiple protocols at the same time. 
+ 													</span>
 												</span>
 											</span>
 										</a>
 									</div>
 								</li>
+
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item leica">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/2235 Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Leica ST 5010 Autostainer XL</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Leica ST 5010 Autostainer XL</strong> has the ability to load up to 11 racks of 30 slides each and simultaneously process various staining protocols such as Papanicolau and Hematoxylin/Eosin stains that can be executed at the same time without the need of reprogramming.
+ 													</span>
 												</span>
 											</span>
 										</a>
 									</div>
 								</li>
+
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item leica">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/Leica 2155 Microtome Thumbnaul.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Leica ST 4040</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Leica ST 4040</strong> linear staining system is designed to meet the current and future needs of today’s high throughput staining laboratories. 
+ 													</span>
 												</span>
 											</span>
 										</a>
@@ -423,38 +435,45 @@
 
 						<!-- ==================== Thermo Stainers ===============================  -->
 						<!-- ==================================================================== -->
+
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item thermo">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/Leica 2135 Microtome Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Thermo Shandon Varistain Gemini</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Thermo Shandon Varistain Gemini</strong> is designed for high throughput, precision, safety, durability and ultimate flexibility in histology and cytology staining applications.
+ 													</span>
 												</span>
 											</span>
 										</a>
 									</div>
 								</li>
 
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item thermo">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/Leica 2125 Microtome Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Shandon 24-4</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Shandon 24-4</strong> has three memory banks, allowing programing using minutes and seconds for up to three 24-step routines, or up to six 12-step procedures. 
+ 													</span>
 												</span>
 											</span>
 										</a>
@@ -464,19 +483,22 @@
 									<!--============================ Sakura Stainers ============================-->
 								<!--========================================================================-->
 
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item sakura">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/2030 Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Sakura DRS 2000</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Sakura DRS 2000</strong> works fast, smart, and effortlessly and can handle up to 20 programs in memory, in continuous or batchmode.  
+ 													</span>
 												</span>
 											</span>
 										</a>
@@ -484,39 +506,44 @@
 								</li>
 
 
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item sakura">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/2030 Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Sakura Tissue TekDRS-601</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Sakura Tissue TekDRS-601</strong> accommodates a wide variety of staining applications which incorporates a user friendly microprocessor that facilitates multiple programs.  
+ 													</span>
 												</span>
 											</span>
 										</a>
 									</div>
 								</li>
 
-
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item sakura">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/2030 Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Sakura DRS-601</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Sakura DRS-601</strong> accommodates a wide variety of staining applications which incorporates a user friendly microprocessor that facilitates multiple programs.These user friendly programs allow the user to place up to 16 different programs into memory to easily identify solutions by name and concentration. 
+ 													</span>
 												</span>
 											</span>
 										</a>
@@ -525,19 +552,23 @@
 
 					<!-- ================== Hematek Stainer =================================
 						==================================================================-->
+
+								<!-- New Format -->
 								<li class="col-md-3 col-sm-6 col-xs-12 isotope-item microm">
 									<div class="portfolio-item">
-										<a href="portfolio-single-small-slider.html">
-											<span class="thumb-info thumb-info-lighten">
+										<a href="leica-2255-microtome.html" class="instrumentThumbnailDescription">
+											<span class="thumb-info thumb-info-lighten ">
 												<span class="thumb-info-wrapper">
-													<img src="img/Microtome Thumbnails/2035 Thumbnail.jpg" class="img-responsive" alt="Leica RM 2255 Micrtome">
+													<img src="img/Leica-RM-2255.jpg" class="img-responsive" alt="">
 													<span class="thumb-info-title">
 														<span class="thumb-info-inner">Hematek 2000</span>
 														<span class="thumb-info-type">Slide Stainer</span>
 													</span>
-													<span class="thumb-info-action">
-														<span class="thumb-info-action-icon"><i class="fa fa-recycle" aria-hidden="true"></i>
-													</span>
+												</span>
+												<hr class="instrumentThumbHorizontalRule">
+												<span class="thumb-info-caption">
+													<span class="thumb-info-caption-text">The <strong>Hematek 2000</strong> features the ability to select from a wide range of stain concentrations to suit hematologists´ varying needs for staining blood films.
+ 													</span>
 												</span>
 											</span>
 										</a>
