added service paces for leica, thin prep and core histology. New CSS styling for them too.

--- a/mypart/used_inst/core_histology_service.html
+++ b/mypart/used_inst/core_histology_service.html
@@ -354,23 +354,37 @@
 
 					<div class="row">
 
-						<div class="col-md-6">
+						<div class="col-md-6 col-lg-6">
 
 							<h2 class="heading-primary mt-lg">Core Histology<strong> Services</strong></h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<p>Southeast Pathology Instrument Service is a leader in providing factory trained service on histo-pathology instrumentation in hospitals and independent laboratories throughout the Southeast and abroad.  Specializing in repair and calibration of the core histology instruments including:</p>
+
+							<ul>
+								<li>Microtomes</li>
+								<li>Tissue Processors</li>
+								<li>Cryostats</li>
+								<li>Coverslippers</li>
+								<li>H&E Stainers</li>
+								<li>IHC Stainers</li>
+								<li>Embedding Centers</li>
+								<li>Slide & Cassette Printers</li>
+							</ul>
+
 
 						
 
 							<h4 class="heading-primary">Service <strong>Info</strong></h4>
-							<ul class="list list-icons list-dark mt-xlg">
-								<li><i class="fa fa-clock-o"></i> Monday - Friday - 9am to 5pm</li>
-								<li><i class="fa fa-clock-o"></i> Saturday - 9am to 2pm</li>
-								<li><i class="fa fa-clock-o"></i> Sunday - Closed</li>
-							</ul>
+							<p>Our team of 9 highly trained technicians can get your equipment up and running with little down time in between. We maintain a healthy parts inventory to keep the need for timely and expensive repeat visits to a minimum.  We also have a supply of loaner instruments available should you experience an urgent need due to a failing instrument. <strong>Please note that we are certified in refrigeration repair and fully outfitted to service any Cryostat cooling malfunction you may be experiencing.</strong></p>
+
+							<h4 class="heading-primary">Region <strong>Serviced</strong></h4>
+
+							
 
 						</div>
 
-						<div class="col-md-6">
+
+
+						<div class="col-md-6 col-lg-6">
 
 							<div class="alert alert-success hidden mt-lg" id="contactSuccess">
 								<strong>Success!</strong> Your message has been sent to us.
@@ -424,6 +438,10 @@
 				</div>
 
 			</div>
+
+			<div class="col-md-12 map1">
+								<img class="img-responsive" src="img/region.png" alt="map">
+							</div>
 
 			<!-- Vendor -->
 		<script src="vendor/jquery/jquery.min.js"></script>
